cabal-version:      2.2
name:               byron-spec-chain
version:            0.1.1.0
license:            Apache-2.0
maintainer:         formal.methods@iohk.io
author:             IOHK Formal Methods Team
homepage:           https://github.com/input-output-hk/cardano-legder-specs
synopsis:           Executable specification of the Cardano blockchain
category:           Testing
build-type:         Simple
extra-source-files: ChangeLog.md

library
    exposed-modules:
        Byron.Spec.Chain.STS.Block
        Byron.Spec.Chain.STS.Rule.BBody
        Byron.Spec.Chain.STS.Rule.Bupi
        Byron.Spec.Chain.STS.Rule.Chain
        Byron.Spec.Chain.STS.Rule.Epoch
        Byron.Spec.Chain.STS.Rule.Pbft
        Byron.Spec.Chain.STS.Rule.SigCnt

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages

    build-depends:
        base >=4.12 && <4.15,
        bimap >=0.4 && <0.5,
        bytestring,
        cardano-data,
        containers,
        byron-spec-ledger,
        goblins,
        hashable,
        hedgehog >=1.0.4,
        microlens,
        microlens-th,
        small-steps,
        small-steps-test

test-suite chain-rules-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        Test.Byron.Spec.Chain.STS.Properties
        Test.Byron.AbstractSize.Properties

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
        "-with-rtsopts=-K4m -M300m"

    build-depends:
        base >=4.12 && <4.15,
        containers,
        cardano-data,
        data-ordlist,
        hedgehog >=1.0.4,
        microlens,
        tasty,
        tasty-hedgehog,
        tasty-hunit,
        byron-spec-chain,
        byron-spec-ledger,
        small-steps,
        small-steps-test
