cabal-version:      2.2
name:               cardano-data
version:            0.1.1.0
license:            Apache-2.0
maintainer:         formal.methods@iohk.io
author:             IOHK Formal Methods Team
homepage:           https://github.com/input-output-hk/cardano-legder-specs
synopsis:           Specialized data for Cardano project
category:           Control
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/input-output-hk/cardano-ledger
    subdir:   libs/cardano-data

library
    exposed-modules:
        Data.AbstractSize
        Data.CanonicalMaps
        Data.MemoBytes
        Data.Coders
        Data.Pulse
        Data.Sharing
        Data.BiMap
        Data.MapExtras
        Data.Roundtrip
        Data.UMap
        Data.ListMap

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages

    build-depends:
        base >=4.12 && <4.15,
        aeson,
        base >=4.11 && <5,
        bytestring,
        cborg,
        containers,
        vector-map,
        cryptonite,
        deepseq,
        formatting,
        mtl,
        microlens,
        nothunks,
        primitive,
        strict-containers,
        text,
        transformers >=0.5,
        vector,
        cardano-crypto-class,
        cardano-binary

test-suite cardano-data-tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        Test.Data.UMap
        Test.Data.Coders
        Test.Data.MapExtras

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
        -threaded

    build-depends:
        base,
        bytestring,
        cardano-binary,
        cborg,
        containers,
        strict-containers,
        tasty,
        tasty-quickcheck,
        tasty-hunit,
        text,
        cardano-data,
        QuickCheck
