cabal-version: 3.0
name:          cardano-ledger-alonzo-test
version:       0.1.1.0
license:       Apache-2.0
copyright:     2020 Input Output (Hong Kong) Ltd.
maintainer:    formal.methods@iohk.io
author:        IOHK Formal Methods Team
bug-reports:   https://github.com/input-output-hk/cardano-ledger/issues
synopsis:      Tests for Cardano ledger introducing Plutus Core
description:
    This package builds upon the Mary ledger with support for extended UTxO
    via Plutus Core.

category:      Network
build-type:    Simple
data-files:
    cddl-files/alonzo.cddl
    cddl-files/real/crypto.cddl
    cddl-files/mock/extras.cddl
    golden/*.cbor

source-repository head
    type:     git
    location: https://github.com/input-output-hk/cardano-ledger
    subdir:   eras/alonzo/test-suite

library
    exposed-modules:
        Test.Cardano.Ledger.Alonzo.AlonzoEraGen
        Test.Cardano.Ledger.Alonzo.EraMapping
        Test.Cardano.Ledger.Alonzo.Examples.Consensus
        Test.Cardano.Ledger.Alonzo.PlutusScripts
        Test.Cardano.Ledger.Alonzo.Serialisation.Generators
        Test.Cardano.Ledger.Alonzo.Scripts
        Test.Cardano.Ledger.Alonzo.Trace

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
        -Wunused-packages

    build-depends:
        base >=4.12 && <4.15,
        bytestring,
        cardano-binary,
        cardano-ledger-alonzo,
        cardano-ledger-core,
        cardano-ledger-pretty,
        cardano-ledger-shelley-ma-test,
        cardano-ledger-shelley-ma,
        cardano-protocol-tpraos,
        cardano-slotting,
        containers,
        data-default-class,
        hashable,
        plutus-tx,
        plutus-ledger-api,
        QuickCheck,
        cardano-ledger-shelley-test,
        cardano-ledger-shelley,
        microlens,
        small-steps,
        small-steps-test,
        strict-containers,
        text,
        transformers

test-suite cardano-ledger-alonzo-test
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    hs-source-dirs:   test
    other-modules:
        Test.Cardano.Ledger.Alonzo.Examples
        Test.Cardano.Ledger.Alonzo.Golden
        Test.Cardano.Ledger.Alonzo.PropertyTests
        Test.Cardano.Ledger.Alonzo.Serialisation.Canonical
        Test.Cardano.Ledger.Alonzo.Serialisation.CDDL
        Test.Cardano.Ledger.Alonzo.Serialisation.Tripping
        Test.Cardano.Ledger.Alonzo.Translation
        Test.Cardano.Ledger.Alonzo.TxInfo
        Paths_cardano_ledger_alonzo_test

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
        -Wunused-packages

    build-depends:
        base >=4.12 && <4.15,
        base16-bytestring,
        bytestring,
        cardano-binary,
        cardano-data,
        cardano-ledger-alonzo,
        cardano-ledger-alonzo-test,
        cardano-ledger-shelley-ma,
        cardano-ledger-core,
        cardano-ledger-shelley-ma-test,
        cardano-protocol-tpraos,
        cardano-slotting,
        cborg,
        containers,
        data-default-class,
        plutus-core,
        plutus-ledger-api,
        QuickCheck,
        small-steps,
        small-steps-test,
        cardano-ledger-shelley,
        cardano-ledger-shelley-test,
        microlens,
        strict-containers,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        time
